tests/NormalTests/paczka1/fuzzy1/33651446.err
Error in line 3: CNvNa8R2 A452 30,1
Error in line 8: CNvNa8R2 A781 60,5
Error in line 2: S5VsX S243 35,9
Error in line 11: S5VsX A781 73,0
Error in line 16: 9hAbtnxGHF S243 70,05
Error in line 14: S5VsX S286 52,3
Error in line 15: 9hAbtnxGHF S243 65,9
Error in line 26: ltqQpRFa S286 -1,6
Error in line 27: S5VsX A452 6,9
Error in line 24: qqsGg A452 80,3
Error in line 29: qqsGg S286 34,5
Error in line 21: ltqQpRFa S286 11,2
Error in line 34: qqsGg S243 69,3
Error in line 40: Qe2Kl A452 92,43
